Shift+Ctrl+V in Slack's message editor pastes two copies of the clipboard text (also Gmail, Google Calendar & Chat, etc)
Categories
(Core :: DOM: Editor, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox113 | --- | unaffected |
firefox114 | --- | unaffected |
firefox115 | + | verified |
firefox116 | --- | verified |
People
(Reporter: cpeterson, Assigned: masayuki)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Masayuki, this bug is a regression from your fix for bug 1815969. I bisected this regression to this pushlog:
Steps to reproduce
- Open Slack in Firefox 115.
- Copy some text to your clipboard, such as the word
test
. - Focus Slack's message editor.
- Shift+Ctrl+V to paste the clipboard text. Shift+Ctrl+V is a keyboard short that commonly pastes clipboard text without any rich text formatting that may have been copied.
Expected behavior
test
In Firefox 114 and Chrome, Shift+Ctrl+V pastes the clipboard text. In Safari, Shift+Ctrl+V doesn't paste anything, which seems like a different bug.
Actual behavior
testtest
In Firefox 115, Shift+Ctrl+V pastes two copies of the clipboard text.
Reporter | ||
Comment 1•2 years ago
|
||
I can reproduce this bug on Windows and macOS. I haven't tested Linux.
Assignee | ||
Comment 2•2 years ago
|
||
Thank you for catching the regression! Taking a look...
Updated•2 years ago
|
Comment 3•2 years ago
|
||
I can reproduce this same issue on various Google products, specifically for textareas that support text formatting, like:
- Google chat
- Gmail compose view (the message body area)
- Google Calendar, event description field (not the event title field)
Updated•2 years ago
|
Comment hidden (obsolete) |
Assignee | ||
Comment 5•2 years ago
|
||
Just a mistake, it should treat ePasteNoFormatting
as an equivalent of ePaste
.
Comment 7•2 years ago
|
||
bugherder |
Updated•2 years ago
|
Reproducible on a 2023-05-11 Nightly build on macOS 12 on Slack.
Verified as fixed on Firefox 115.0b4(build ID: 20230611180300) and Nightly 116.0a1(build ID: 20230612211509) on macOS 12, Windows 10, Ubuntu 22, on Slack.
Shift + CTRL/CMD + C now pastes only one copy of the clipboard text.
Description
•